# SCT_ML_4

./: .gitignore  MODEL_CARD.md  README.md  RUNNING_ON_WINDOWS.md  TECHNICAL_REPORT.md  WEBCAM_TESTER_GUIDE.md  check_system.py  gesture_mapping.json  hand_gesture_recognition.ipynb  inference.py  pyproject.toml  requirements.txt  run_inference.bat  run_upload.bat  upload_to_huggingface.py  webcam_gesture_tester.py
