[project]
name = "hand-gesture-recognition"
version = "0.1.0"
description = "Real-time hand gesture recognition using MediaPipe and LSTM neural networks"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE.md"}
authors = [
    {name = "Abdul Ahad"}
]
keywords = ["machine-learning", "computer-vision", "gesture-recognition", "lstm", "mediapipe", "deep-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "kagglehub>=0.3.0",
    "opencv-python==4.10.0.84",
    "numpy==1.26.4",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mediapipe==0.10.14",
    "scikit-learn>=1.3.0",
    "tensorflow==2.16.1",
    "tqdm>=4.65.0",
    "ipykernel>=6.25.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
