[project]
name = "hand-gesture-recognition"
version = "0.1.0"
description = "Real-time hand gesture recognition using MediaPipe and LSTM neural networks"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "opencv-python==4.10.0.84",
    "mediapipe==0.10.14",
    "numpy==1.26.4",
    "huggingface-hub>=0.23.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.4",
]
